--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.1.0'
 
+    implementation 'org.tensorflow:tensorflow-lite:1.13.1'
+
 //    implementation "com.google.android.material:material:1.0.0"
 }
