--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,15 @@
           package="app.bsc.db.drawing">
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application
+
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher">
-
+        <receiver android:name=".view.alarms_management.CreateAlarmFragment$AlarmReceiver">
+        </receiver>
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
