--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,21 +3,25 @@
           package="app.bsc.db.drawing">
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application
-
+            android:screenOrientation="portrait"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
+            android:icon="@drawable/fmg1"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:roundIcon="@drawable/fmg1"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher">
-        <receiver android:name=".view.alarms_management.CreateAlarmFragment$AlarmReceiver">
-        </receiver>
+
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+        <activity android:name=".view.DrawActivity"></activity>
+
+        <receiver android:name=".view.alarms_management.CreateAlarmFragment$AlarmReceiver">
+        </receiver>
+
     </application>
 
 </manifest>
