--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="app.bsc.db.drawing">
+
     <uses-permission android:name="android.permission.VIBRATE"/>
+
     <application
-            android:screenOrientation="portrait"
             android:allowBackup="true"
             android:icon="@drawable/fmg1"
             android:label="@string/app_name"
             android:roundIcon="@drawable/fmg1"
+            android:screenOrientation="portrait"
             android:supportsRtl="true"
             android:theme="@style/AppTheme.Launcher">
-
         <activity android:name=".view.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".view.DrawActivity"></activity>
+        <activity android:name=".view.DrawActivity"/>
 
         <receiver android:name=".view.alarms_management.CreateAlarmFragment$AlarmReceiver">
         </receiver>
-
     </application>
 
 </manifest>
