--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,26 @@ android {
         noCompress "tflite"
         noCompress "lite"
     }
+
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+        exclude 'META-INF/LICENSE.md'
+        exclude'META-INF/LICENSE-notice.md'
+    }
+
+    useLibrary 'org.apache.http.legacy'
+
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
@@ -35,23 +51,24 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
-
     implementation 'com.google.android.material:material:1.1.0-alpha06'
-
-    implementation "org.jetbrains.anko:anko-design:0.10.8"
-    implementation "org.jetbrains.anko:anko-commons:0.10.8"
-
+    implementation 'org.jetbrains.anko:anko-design:0.10.8'
+    implementation 'org.jetbrains.anko:anko-commons:0.10.8'
     implementation 'com.android.support:appcompat-v7:28.1.0'
     implementation 'com.android.support:design:28.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.1.0'
-
     implementation 'org.tensorflow:tensorflow-lite:1.13.1'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
-
     implementation 'com.nex3z:finger-paint-view:0.1.0'
+    //    implementation "com.google.android.material:material:1.0.0"
+    implementation files('libs/httpclient-4.5.9.jar')
+    implementation files('libs/httpcore-4.4.11.jar')
+    implementation files('libs/httpmime-4.5.9.jar')
 
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
 
-//    implementation "com.google.android.material:material:1.0.0"
+    //    compile 'com.android.support:appcompat-v7:23.0.1'
+
 }
